# teams-tui

./: .env.example  AZURE_SETUP.md  Cargo.toml  LICENSE  README.md
.github/: copilot-instructions.md
.github/workflows/: pr-checks.yml
src/: api.rs  app.rs  auth.rs  config.rs  image_display.rs  lib.rs  main.rs  ui.rs
tests/: app_integration.rs
